# prueba1

./: .gitignore  .pre-commit-config.yaml  __init__.py  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
product/: apps.py  models.py  tests.py  views.py
product/migrations/: 0001_initial.py  0002_rename_nombre_product_name.py  __init__.py
prueba1/: .pre-commit-config.yaml  __init__.py  settings.py
usuarios/: models.py  views.py
usuarios/migrations/: 0001_initial.py  0002_auto_20250310_1954.py
